--- a/MvcRepositoryPatternDemo/Views/Book/Create.cshtml
+++ b/MvcRepositoryPatternDemo/Views/Book/Create.cshtml
@@ -6,7 +6,6 @@
 
 <h1>Create</h1>
 
-<h4>Book</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,29 +13,36 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
+                <input asp-for="Title" class="form-control" autocomplete="off" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="Auther" class="control-label"></label>
-                <input asp-for="Auther" class="form-control" />
+                <input asp-for="Auther" class="form-control" autocomplete="off" />
                 <span asp-validation-for="Auther" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+                <input asp-for="Price" class="form-control" autocomplete="off" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+            <br />
+           <div class="row">
+                <div class="form-group col-md-8">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+                <div class="col-md-4">
+                    <a asp-action="Index" class="btn btn-dark">Back to List</a>
+                </div>
+           </div>
         </form>
+        <br />
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
