--- a/MvcRepositoryPatternDemo/Views/Book/Delete.cshtml
+++ b/MvcRepositoryPatternDemo/Views/Book/Delete.cshtml
@@ -6,34 +6,21 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this book?</h3>
 <div>
-    <h4>Book</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Auther)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Auther)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
+        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Title)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Title)</dd>
+        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Auther)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Auther)</dd>
+        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Price)</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Price)</dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="bookId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a asp-action="Index" class="btn btn-dark">Back to List</a>
     </form>
 </div>
