--- a/MvcRepositoryPatternDemo/Views/Book/Details.cshtml
+++ b/MvcRepositoryPatternDemo/Views/Book/Details.cshtml
@@ -7,30 +7,21 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Book</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Auther)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Auther)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
+        <dt class = "col-sm-2">@Html.DisplayNameFor(model => model.Title):</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Title)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Auther):</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Auther)</dd>
+        <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Price):</dt>
+        <dd class = "col-sm-10">@Html.DisplayFor(model => model.Price)</dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.bookId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="row">
+    <div class="col-md-2">
+
+    </div>
+    <div class="col-md-10">
+        <a asp-action="Index" class="btn btn-dark">Back to List</a>
+    </div>
 </div>
