--- a/MvcRepositoryPatternDemo/Views/Book/Edit.cshtml
+++ b/MvcRepositoryPatternDemo/Views/Book/Edit.cshtml
@@ -6,7 +6,6 @@
 
 <h1>Edit</h1>
 
-<h4>Book</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,29 +14,34 @@
             <input type="hidden" asp-for="bookId" />
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
+                <input asp-for="Title" class="form-control" autocomplete="off" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="Auther" class="control-label"></label>
-                <input asp-for="Auther" class="form-control" />
+                <input asp-for="Auther" class="form-control" autocomplete="off" />
                 <span asp-validation-for="Auther" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+                <input asp-for="Price" class="form-control" autocomplete="off" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <br />
+            <div class="row">
+                <div class="form-group col-md-8">
+                    <input type="submit" value="Update" class="btn btn-primary" />
+                </div>
+                <div class="col-md-4">
+                    <a asp-action="Index" class="btn btn-dark">Back to List</a>
+                </div>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
