Create a Login view

--- a/MvcRepositoryPatternDemo/Views/Shared/_Layout.cshtml
+++ b/MvcRepositoryPatternDemo/Views/Shared/_Layout.cshtml
@@ -19,6 +19,14 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <span class="nav-link text-white">Welcome  @TempData["Username"]</span>
+                        </li>
+                        <li class="nav-item">
+                            <form asp-controller="Auth" asp-action="Logout" method="post">
+                                <button type="submit" class="btn btn-link text-white nav-link" style="text-decoration: none">Logout</button>
+                            </form>
+                        </li>
                        @*  <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -36,8 +44,8 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container" style="text-align:center">
+    <footer class="border-top footer text-muted" style=" background-color:black">
+        <div class="container" style="text-align:center; color:white">
            @*  &copy; 2023 -  *@ MvcRepositoryPatternDemo @* - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> *@
         </div>
     </footer>
