--- a/MvcRepositoryPatternDemo/Views/Book/Index.cshtml
+++ b/MvcRepositoryPatternDemo/Views/Book/Index.cshtml
@@ -8,13 +8,20 @@
 <div class="row">
     <div class="col-md-10">
         <h1>Index</h1>
+      @*   @using (Html.BeginForm("Index", "Book", FormMethod.Get))
+        {
+            <div style="display:flex; justify-content:right;">
+                @Html.TextBox("searchString", ViewData["SearchString"] as string, new { placeholder = "Enter title or author", autocomplete = "off" })
+                &nbsp; <input type="submit" value="Search" class="btn btn-primary btn-sm" />
+            </div>
+        } *@
     </div>
     <div class="col-md-2">
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a asp-action="Create" class="btn btn-primary">Add Book</a>
+        <a asp-action="Create" asp-controller="Book" class="btn btn-primary">Add Book</a>
+       
     </div>
 </div>
-
-<table class="table">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>@Html.DisplayNameFor(model => model.Title)</th>
